# awfui

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-test-sdl.ps1  build-test-sdl.sh  buildAfui.bat  buildAwfui.bat  buildAwfui.sh  formatProjectFiles.ps1  spaceBetweenFunctionsEnforcer.ps1  spaceBetweenFunctionsEnforcer.sh  validateContainers.cpp  ✅ Implemented & Working.md
backends/Lovyan/: AFDisplayLovyanGFX.cpp  AFDisplayLovyanGFX.h  AFTouchLovyanGFX.h
backends/adafruit/: AFAdafruitCompat.h  AFDisplayAdafruitGFX.cpp  AFDisplayAdafruitGFX.h  AFFt6206Touch.h
backends/sdl/: AFDisplaySDL.cpp  AFDisplaySDL.h  AFTouchSDL.cpp  AFTouchSDL.h  gfx_sdl.cpp
cmake/: hal_stubs.cpp  stm32_platform.cmake
docs/: AFUI Framework Specification (0.1).txt  AFUI.txt  AWFUI Documentation - Developing.md  AWFUI Documentation - Futures.md  AWFUI Documentation - Main.md  AWFUI Documentation - widgets.md  AWFUI Framework Specification (Draft 0.2).md  AWFUI usage notes.txt  AWFUI-Documentation-Developing.md  AWFUI-Documentation-Futures.md  AWFUI-Documentation-Main.md  AWFUI-Documentation-widgets.md  AWFUI-Framework-Specification (Draft 0.2).md  AWFUI-Integration-Guide-for-Adafruit-Projects.md  conventions.txt  todo.txt  ✅ Implemented & Working.md  ✅ Implemented-and-Working.md
docs/thoughts/: Implemented-and-Working.md  noodling.txt  on AFEventInterface.txt  on afimage.txt  on widget creator.txt
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  build-demo.ps1  build-demo.sh  main.cpp
examples/demo-justsdl/: CMakeLists.txt  main.cpp
examples/elecrow-esp32s3/: validate_containers.cpp
examples/elecrow2_4/: copy_from_lib.bat  copy_to_lib.bat  platformio.ini
examples/elecrow2_4/include/: LovyanGFX_Driver.h  pins_config.h  touch.h
examples/elecrow2_4/src/: main.cpp
examples/keypad/: CMakeLists.txt  build-keypad.ps1  build-keypad.sh  main.cpp
examples/test/: AFSliderKeyboard.cpp  AFSliderKeyboard.h  CMakeLists.txt  KeyboardExample.cpp  SliderKeyboardExample.cpp  build-test.ps1  build-test.sh  main.cpp  testUi.cpp  testui.h
include/: AFAdafruitCompat.h  AFBase.h  AFButton.h  AFCheckbox.h  AFCompilerCompat.h  AFContainer.h  AFDialog.h  AFDisplayAdafruitGFX.h  AFDisplayBase.h  AFDisplayInterface.h  AFEvent.h  AFEventQueue.h  AFFt6206Touch.h  AFFullscreenDialog.h  AFIdConfig.h  AFImage.h  AFImageButton.h  AFImageWidget.h  AFKeyboard.h  AFLabel.h  AFLayoutHelpers.h  AFModalDialog.h  AFPanel.h  AFProgressBar.h  AFQueue.h  AFRadioButton.h  AFRadioButtonGroup.h  AFResult.h  AFScreen.h  AFScreenList.h  AFSlider.h  AFTheme.h  AFTouchInterface.h  AFTouchSDL.h  AFValueWidget.h  AFVector.h  AFVersion.h  AFWidget.h  AFWorld.h  gfx_sdl.hpp
src/: AFBase.cpp  AFButton.cpp  AFCheckbox.cpp  AFContainer.cpp  AFDialog.cpp  AFDisplayAdafruitGFX.cpp  AFDisplayInterface.cpp  AFFullscreenDialog.cpp  AFImage.cpp  AFImageButton.cpp  AFImageWidget.cpp  AFKeyboard.cpp  AFLabel.cpp  AFLayoutHelpers.cpp  AFModalDialog.cpp  AFPanel.cpp  AFProgressBar.cpp  AFRadioButton.cpp  AFRadioButtonGroup.cpp  AFScreen.cpp  AFScreenList.cpp  AFSlider.cpp  AFTouchSDL.cpp  AFWidget.cpp  AFWorld.cpp  gfx_sdl.cpp
